--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
+    "autosuggest-highlight": "^3.1.0",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
-    "prop-types": "^15.6.0",
-    "autosuggest-highlight": "^3.1.0",
     "draft-js": "^0.10.4",
     "install": "^0.10.1",
     "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.13",
     "material-ui-icons": "^1.0.0-beta.15",
     "npm": "^5.4.2",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-autosuggest": "^9.3.2",
     "react-dom": "^16.0.0",
@@ -18,7 +18,8 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "showdown": "^1.8.3"
+    "showdown": "^1.8.3",
+    "yarn": "^1.5.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.5"
